--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
     <div class="box">
        <div class="c skillset">80%</div>
     </div>
-    <p>Graphic desing</p> 
+    <p>Graphic design</p> 
     <div class="box">
        <div class="graphic skillset">80%</div>
     </div>
